Align to greeting-microservice template